--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../Watery/css/script.css">
+    <link rel="stylesheet" href="New/css/script.css">
 </head>
 <body>
     <h1>NURJ Luxury</h1>
@@ -14,9 +14,9 @@
       Home of top-notch African female wears. Find out all you need to know
       about NURJ Luxury
     </p>
-    <a href="../Watery/about.html">About Us</a>
+    <a href="New/about.html">About Us</a>
     <br />
-    <a href="../Watery/contact.html">Contact Us</a>
+    <a href="New/contact.html">Contact Us</a>
     <br /><br />
     <h3 class="Discount">
       40% off all wears order on or before 25th of November.
@@ -24,7 +24,7 @@
     <br /><br />
 
     <div>
-      <img src="../Watery/Images/Image1.jpg" width="500" alt="icon" />
+      <img src="../images/Image1.jpg" width="500" alt="icon" />
       <p class="Imagename">SHOP ALL DRESSES</p>
       <br />
       <img src="../Watery/Images/Image2.jpg" width="500" alt="icon" />
