--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="New/css/script.css">
+    <link rel="stylesheet" href="./css/script.css">
 </head>
 <body>
     <h1>NURJ Luxury</h1>
@@ -14,9 +14,9 @@
       Home of top-notch African female wears. Find out all you need to know
       about NURJ Luxury
     </p>
-    <a href="New/about.html">About Us</a>
+    <a href="./about.html">About Us</a>
     <br />
-    <a href="New/contact.html">Contact Us</a>
+    <a href="./contact.html">Contact Us</a>
     <br /><br />
     <h3 class="Discount">
       40% off all wears order on or before 25th of November.
@@ -24,23 +24,21 @@
     <br /><br />
 
     <div>
-      <img src="../images/Image1.jpg" width="500" alt="icon" />
+      <img src="./images/Image1.jpg" width="500" alt="icon" />
       <p class="Imagename">SHOP ALL DRESSES</p>
       <br />
-      <img src="../Watery/Images/Image2.jpg" width="500" alt="icon" />
+      <img src="./images/Image2.jpg" width="500" alt="icon" />
       <p class="Imagename">NEW IN DRESSES</p>
       <br />
-      <img src="../Watery/Images/Image3.jpg" width="500" alt="icon" />
+      <img src="./images/Image3.jpg" width="500" alt="icon" />
       <p class="Imagename">NURJ DOLLS</p>
       <br />
-      <img src="../Watery/Images/Image4.jpg" width="500" alt="icon" />
+      <img src="./images/Image4.jpg" width="500" alt="icon" />
       <p class="Imagename">SPECIAL OCCASIONS</p>
       <br />
-      <img src="../Watery/Images/Image5.jpg" width="500" alt="icon" />
+      <img src="./mages/Image5.jpg" width="500" alt="icon" />
       <p class="Imagename">WEDDING GUESTS</p>
     </div>
   </body>
 </html>
 
-</body>
-</html>
